--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Souklou</string>
     <string name="app_presentation">
-        "For example, position the FAB to one side of stream "
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     </string>
     <string name="facebook_app_id">1749627475323024</string>
     <string name="facebook_ACCOUNT_KIT_CLIENT_TOKEN">b480956dc6b7472a103d59439f0f9df3</string>
@@ -16,4 +16,5 @@
     <string name="register">Inscription</string>
     <string name="registerBtn">s\'inscrire</string>
     <string name="add_child_execpt">Veille sur l\'enfant dès maintenant: Ton avenir est là</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
