--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="use_email">Utiliser son email</string>
     <string name="register">Inscription</string>
     <string name="registerBtn">s\'inscrire</string>
-    <string name="add_child_execpt">Veille sur l\'enfant dès maintenant: Ton avenir est là</string>
+    <string name="add_child_execpt">Veillez sur l\'enfant dès maintenant car son avenir y est</string>
     <string name="title_activity_main2">Main2Activity</string>
 
     <string name="addBtn">Enregistrer</string>
